tests/negative_pomidory/last_orphan_obj.pomidor
@url home_page

@url home_page
crazytomato -1
!!Comment
When I click on the #practice_menu_button I get #tomato :)